<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:layout_gravity="center"
    android:focusableInTouchMode="true"
    android:gravity="center" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:padding="20dp"
                    android:text="  Already\n  have an\n  Account !"
                    android:textColor="@color/black"
                    android:textSize="35dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_daily_background" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corners">

                <EditText
                    android:id="@+id/username"
                    style="@style/loginInput"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corners">

                <EditText
                    android:id="@+id/password"
                    style="@style/loginInput"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/register"
                style="@style/loginInput"
                android:layout_gravity="end"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="Do not have an account?"
                android:textColor="@color/icon_color"
                android:textSize="20sp" />

            <Button
                style="@style/loginInput"
                android:id="@+id/login_in"
                android:layout_gravity="center_horizontal"
                android:layout_width="210dp"
                android:layout_marginBottom="200dp"
                android:background="@drawable/round_corner"
                android:text="login"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>