<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:layout_gravity="center"
    android:focusableInTouchMode="true"
    android:gravity="center" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:padding="20dp"
                    android:text="Start with your new journey!"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="25dp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout style="@style/parent">

                <EditText
                    android:id="@+id/username"
                    style="@style/loginInput"
                    android:background="@drawable/rounded_corners"
                    android:hint="Name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/phone"
                    style="@style/loginInput"
                    android:background="@drawable/rounded_corners"
                    android:hint="Phone Number"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/email"
                    style="@style/loginInput"
                    android:background="@drawable/rounded_corners"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/gender"
                style="@android:style/Widget.Spinner"
                android:layout_width="330dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:entries="@array/ctype"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/age"
                    style="@style/loginInput"
                    android:background="@drawable/rounded_corners"
                    android:hint="Age"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/password"
                    style="@style/loginInput"
                    android:background="@drawable/rounded_corners"
                    android:hint="Password"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/confirm"
                    style="@style/loginInput"
                    android:background="@drawable/rounded_corners"
                    android:hint="Confirm Password"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/datepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_corners"
                android:text="The month and day of birth" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_height="60dp"
                android:layout_width="match_parent"
                >

                <TextView
                    android:id="@+id/back"
                    android:layout_height="30dp"
                    android:layout_width="match_parent"
                    android:layout_marginTop="2dp"
                    android:gravity="center"
                    android:text="Already have an account?"
                    android:textColor="@color/icon_color"
                    android:textSize="20sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signup"
                android:layout_width="210dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="200dp"
                android:background="@drawable/round_corner"
                android:text="Register"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>